# dreamerv4-jax

./: README.md  pyproject.toml
src/dreamerv4_jax/: transformer.py
src/dreamerv4_jax/layers/: linear.py
src/dreamerv4_jax/models/: dreamerv4.py
