[project]
name = "dreamerv4-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "symoon11", email = "symoon11@snu.ac.kr" }
]
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.2",
    "jax[cuda12]>=0.8.2",
    "sglang-jax>=0.0.2",
    "tokamax>=0.0.9",
]

[project.scripts]
dreamerv4-jax = "dreamerv4_jax:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
